--- a/IngenieriaPruebas/Contenido de Construcción/Codigo_fuente/src/main/resources/proyecto/calculadora.fxml
+++ b/IngenieriaPruebas/Contenido de Construcción/Codigo_fuente/src/main/resources/proyecto/calculadora.fxml
@@ -6,17 +6,23 @@
 <?import javafx.scene.control.TextField?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="proyecto.Controller" prefWidth="400" prefHeight="300">
+            fx:controller="proyecto.Controller" prefWidth="360" prefHeight="420">
     
-    <Label text="Calculadora Base" layoutX="150" layoutY="20" />
+    <Label text="Calculadora Base" layoutX="28" layoutY="20" />
     
-    <TextField fx:id="inputA" layoutX="50" layoutY="70" prefWidth="100"/>
-    <TextField fx:id="inputB" layoutX="200" layoutY="70" prefWidth="100"/>
+    <TextField fx:id="inputA" layoutX="245" layoutY="45" prefWidth="100"/>
+    <TextField fx:id="inputB" layoutX="245" layoutY="85" prefWidth="100"/>
     
-    <Button text="Sumar" layoutX="50" layoutY="120" fx:id="btnSumar" onAction="#sumar"/>
-    <Button text="Restar" layoutX="200" layoutY="120" fx:id="btnRestar" onAction="#restar"/>
-    <Button text="Multiplicar" layoutX="300" layoutY="120" fx:id="btnMulti" onAction="#multi"/>
     
-    <Label fx:id="lblResultado" text="Resultado:" layoutX="50" layoutY="180"/>
+    <Button text="=" layoutX="300" layoutY="370" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35" />
+    <Button text="+" layoutX="300" layoutY="325" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="-" layoutX="300" layoutY="275" fx:id="btnRestar" onAction="#restar" prefWidth="35" prefHeight="35"/>
+    <Button text="X" layoutX="300" layoutY="225" fx:id="btnMultiplicar" onAction="#multiplicar" prefWidth="35" prefHeight="35"/>
+    <Button text="÷" layoutX="300" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text=".100" layoutX="225" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+
+
+    
+    <Label fx:id="lblResultado" text="Resultado:" layoutX="28" layoutY="65"/>
     
 </AnchorPane>
