--- a/IngenieriaPruebas/Contenido de Construcción/Codigo_fuente/src/main/resources/proyecto/calculadora.fxml
+++ b/IngenieriaPruebas/Contenido de Construcción/Codigo_fuente/src/main/resources/proyecto/calculadora.fxml
@@ -19,10 +19,26 @@
     <Button text="-" layoutX="300" layoutY="275" fx:id="btnRestar" onAction="#restar" prefWidth="35" prefHeight="35"/>
     <Button text="X" layoutX="300" layoutY="225" fx:id="btnMultiplicar" onAction="#multiplicar" prefWidth="35" prefHeight="35"/>
     <Button text="÷" layoutX="300" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text=".100" layoutX="225" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-
-
     
+    <Button text=".100" layoutX="225" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="9" layoutX="225" layoutY="225" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="6" layoutX="225" layoutY="275" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="3" layoutX="225" layoutY="325" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+
+
+    <Button text="⌫" layoutX="145" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="8" layoutX="145" layoutY="225" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="5" layoutX="145" layoutY="275" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="2" layoutX="145" layoutY="325" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="." layoutX="145" layoutY="370" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+
+
+    <Button text="AC" layoutX="65" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="7" layoutX="65" layoutY="225" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="4" layoutX="65" layoutY="275" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="1" layoutX="65" layoutY="325" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button text="0" layoutX="65" layoutY="370" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+
     <Label fx:id="lblResultado" text="Resultado:" layoutX="28" layoutY="65"/>
     
 </AnchorPane>
