--- a/IngenieriaPruebas/Contenido de Construcción/Codigo_fuente/src/main/resources/proyecto/calculadora.fxml
+++ b/IngenieriaPruebas/Contenido de Construcción/Codigo_fuente/src/main/resources/proyecto/calculadora.fxml
@@ -1,44 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="proyecto.Controller" prefWidth="360" prefHeight="420">
-    
-    <Label text="Calculadora" layoutX="28" layoutY="20" />
-    
-    <TextField fx:id="inputA" layoutX="245" layoutY="45" prefWidth="100"/>
-    <TextField fx:id="inputB" layoutX="245" layoutY="85" prefWidth="100"/>
+<AnchorPane prefHeight="420" prefWidth="360" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyecto.Controller">
+    <TextField fx:id="screen" layoutX="245" layoutY="85" prefWidth="100" />
     
     
-    <Button text="=" layoutX="300" layoutY="370" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35" />
-    <Button text="+" layoutX="300" layoutY="325" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="-" layoutX="300" layoutY="275" fx:id="btnRestar" onAction="#restar" prefWidth="35" prefHeight="35"/>
-    <Button text="X" layoutX="300" layoutY="225" fx:id="btnMultiplicar" onAction="#multiplicar" prefWidth="35" prefHeight="35"/>
-    <Button text="÷" layoutX="300" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button fx:id="btnIgual" layoutX="300" layoutY="370" onAction="#igual" prefHeight="35" prefWidth="35" text="=" />
+    <Button fx:id="btnSumar" layoutX="300" layoutY="325" onAction="#sumar" prefHeight="35" prefWidth="35" text="+" />
+    <Button fx:id="btnRestar" layoutX="300" layoutY="275" onAction="#restar" prefHeight="35" prefWidth="35" text="-" />
+    <Button fx:id="btnMultiplicar" layoutX="300" layoutY="225" onAction="#multiplicar" prefHeight="35" prefWidth="35" text="X" />
+    <Button fx:id="btnDividir" layoutX="300" layoutY="180" onAction="#dividir" prefHeight="35" prefWidth="35" text="÷" />
     
-    <Button text=".100" layoutX="225" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="9" layoutX="225" layoutY="225" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="6" layoutX="225" layoutY="275" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="3" layoutX="225" layoutY="325" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button fx:id="btnHistorial" layoutX="225" layoutY="180" onAction="#historial" prefHeight="35" prefWidth="35" text="historial" />
+    <Button fx:id="btnNueve" layoutX="225" layoutY="225" onAction="#typeNueve" prefHeight="35" prefWidth="35" text="9" />
+    <Button fx:id="btnSeis" layoutX="225" layoutY="275" onAction="#typeSeis" prefHeight="35" prefWidth="35" text="6" />
+    <Button fx:id="btnTres" layoutX="225" layoutY="325" onAction="#typeTres" prefHeight="35" prefWidth="35" text="3" />
 
 
-    <Button text="⌫" layoutX="145" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="8" layoutX="145" layoutY="225" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="5" layoutX="145" layoutY="275" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="2" layoutX="145" layoutY="325" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="." layoutX="145" layoutY="370" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
+    <Button fx:id="btnDelete" layoutX="145" layoutY="180" onAction="#delete" prefHeight="35" prefWidth="35" text="⌫" />
+    <Button fx:id="btnOcho" layoutX="145" layoutY="225" onAction="#typeOcho" prefHeight="35" prefWidth="35" text="8" />
+    <Button fx:id="btnCinco" layoutX="145" layoutY="275" onAction="#typeCinco" prefHeight="35" prefWidth="35" text="5" />
+    <Button fx:id="btnDos" layoutX="145" layoutY="325" onAction="#typeDos" prefHeight="35" prefWidth="35" text="2" />
+    <Button fx:id="btnPunto" layoutX="145" layoutY="370" onAction="#typePunto" prefHeight="35" prefWidth="35" text="." />
 
 
-    <Button text="AC" layoutX="65" layoutY="180" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="7" layoutX="65" layoutY="225" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="4" layoutX="65" layoutY="275" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="1" layoutX="65" layoutY="325" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-    <Button text="0" layoutX="65" layoutY="370" fx:id="btnSumar" onAction="#sumar" prefWidth="35" prefHeight="35"/>
-
-    <Label fx:id="lblResultado" text="Resultado:" layoutX="28" layoutY="65"/>
+    <Button fx:id="btnClearAll" layoutX="65" layoutY="180" onAction="#clearAll" prefHeight="35" prefWidth="35" text="AC" />
+    <Button fx:id="btnSiete" layoutX="65" layoutY="225" onAction="#typeSiete" prefHeight="35" prefWidth="35" text="7" />
+    <Button fx:id="btnCuatro" layoutX="65" layoutY="275" onAction="#typeCuatro" prefHeight="35" prefWidth="35" text="4" />
+    <Button fx:id="btnUno" layoutX="65" layoutY="325" onAction="#typeUno" prefHeight="35" prefWidth="35" text="1" />
+    <Button fx:id="btnCero" layoutX="65" layoutY="370" onAction="#typeCero" prefHeight="35" prefWidth="35" text="0" />
     
 </AnchorPane>
