--- a/IngenieriaPruebas/Contenido de Construcción/Codigo_fuente/src/main/resources/proyecto/calculadora.fxml
+++ b/IngenieriaPruebas/Contenido de Construcción/Codigo_fuente/src/main/resources/proyecto/calculadora.fxml
@@ -1,36 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="420" prefWidth="360" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyecto.Controller">
-    <TextField fx:id="screen" layoutX="245" layoutY="85" prefWidth="100" />
-    
-    
-    <Button fx:id="btnIgual" layoutX="300" layoutY="370" onAction="#igual" prefHeight="35" prefWidth="35" text="=" />
-    <Button fx:id="btnSumar" layoutX="300" layoutY="325" onAction="#sumar" prefHeight="35" prefWidth="35" text="+" />
-    <Button fx:id="btnRestar" layoutX="300" layoutY="275" onAction="#restar" prefHeight="35" prefWidth="35" text="-" />
-    <Button fx:id="btnMultiplicar" layoutX="300" layoutY="225" onAction="#multiplicar" prefHeight="35" prefWidth="35" text="X" />
-    <Button fx:id="btnDividir" layoutX="300" layoutY="180" onAction="#dividir" prefHeight="35" prefWidth="35" text="÷" />
-    
-    <Button fx:id="btnHistorial" layoutX="225" layoutY="180" onAction="#historial" prefHeight="35" prefWidth="35" text="historial" />
-    <Button fx:id="btnNueve" layoutX="225" layoutY="225" onAction="#typeNueve" prefHeight="35" prefWidth="35" text="9" />
-    <Button fx:id="btnSeis" layoutX="225" layoutY="275" onAction="#typeSeis" prefHeight="35" prefWidth="35" text="6" />
-    <Button fx:id="btnTres" layoutX="225" layoutY="325" onAction="#typeTres" prefHeight="35" prefWidth="35" text="3" />
+<AnchorPane prefHeight="420" prefWidth="360"
+            xmlns="http://javafx.com/javafx/21"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="proyecto.Controller"
+            stylesheets="@styles.css">
 
+    <!-- Pantalla -->
+    <TextField fx:id="screen" layoutX="20" layoutY="20"
+               prefWidth="320" prefHeight="60"
+               style="-fx-font-size: 20px; -fx-alignment: center-right;" />
 
-    <Button fx:id="btnDelete" layoutX="145" layoutY="180" onAction="#delete" prefHeight="35" prefWidth="35" text="⌫" />
-    <Button fx:id="btnOcho" layoutX="145" layoutY="225" onAction="#typeOcho" prefHeight="35" prefWidth="35" text="8" />
-    <Button fx:id="btnCinco" layoutX="145" layoutY="275" onAction="#typeCinco" prefHeight="35" prefWidth="35" text="5" />
-    <Button fx:id="btnDos" layoutX="145" layoutY="325" onAction="#typeDos" prefHeight="35" prefWidth="35" text="2" />
-    <Button fx:id="btnPunto" layoutX="145" layoutY="370" onAction="#typePunto" prefHeight="35" prefWidth="35" text="." />
+    <!-- Teclado -->
+    <GridPane layoutX="20" layoutY="100" prefWidth="320" prefHeight="300"
+              hgap="10" vgap="10">
 
+        <!-- Columnas: 4 iguales -->
+        <columnConstraints>
+            <ColumnConstraints percentWidth="25" hgrow="ALWAYS"/>
+            <ColumnConstraints percentWidth="25" hgrow="ALWAYS"/>
+            <ColumnConstraints percentWidth="25" hgrow="ALWAYS"/>
+            <ColumnConstraints percentWidth="25" hgrow="ALWAYS"/>
+        </columnConstraints>
 
-    <Button fx:id="btnClearAll" layoutX="65" layoutY="180" onAction="#clearAll" prefHeight="35" prefWidth="35" text="AC" />
-    <Button fx:id="btnSiete" layoutX="65" layoutY="225" onAction="#typeSiete" prefHeight="35" prefWidth="35" text="7" />
-    <Button fx:id="btnCuatro" layoutX="65" layoutY="275" onAction="#typeCuatro" prefHeight="35" prefWidth="35" text="4" />
-    <Button fx:id="btnUno" layoutX="65" layoutY="325" onAction="#typeUno" prefHeight="35" prefWidth="35" text="1" />
-    <Button fx:id="btnCero" layoutX="65" layoutY="370" onAction="#typeCero" prefHeight="35" prefWidth="35" text="0" />
-    
+        <!-- Filas: 5 iguales -->
+        <rowConstraints>
+            <RowConstraints percentHeight="20" vgrow="ALWAYS"/>
+            <RowConstraints percentHeight="20" vgrow="ALWAYS"/>
+            <RowConstraints percentHeight="20" vgrow="ALWAYS"/>
+            <RowConstraints percentHeight="20" vgrow="ALWAYS"/>
+            <RowConstraints percentHeight="20" vgrow="ALWAYS"/>
+        </rowConstraints>
+
+        <!-- Fila 1 -->
+        <Button text="AC" fx:id="btnClearAll" onAction="#clearAll"
+                GridPane.rowIndex="0" GridPane.columnIndex="0"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="⌫" fx:id="btnDelete" onAction="#delete"
+                GridPane.rowIndex="0" GridPane.columnIndex="1"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="Hist" fx:id="btnHistorial" onAction="#historial"
+                GridPane.rowIndex="0" GridPane.columnIndex="2"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="÷" fx:id="btnDividir" onAction="#dividir"
+                GridPane.rowIndex="0" GridPane.columnIndex="3"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+
+        <!-- Fila 2 -->
+        <Button text="7" fx:id="btnSiete" onAction="#typeSiete"
+                GridPane.rowIndex="1" GridPane.columnIndex="0"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="8" fx:id="btnOcho" onAction="#typeOcho"
+                GridPane.rowIndex="1" GridPane.columnIndex="1"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="9" fx:id="btnNueve" onAction="#typeNueve"
+                GridPane.rowIndex="1" GridPane.columnIndex="2"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="X" fx:id="btnMultiplicar" onAction="#multiplicar"
+                GridPane.rowIndex="1" GridPane.columnIndex="3"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+
+        <!-- Fila 3 -->
+        <Button text="4" fx:id="btnCuatro" onAction="#typeCuatro"
+                GridPane.rowIndex="2" GridPane.columnIndex="0"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="5" fx:id="btnCinco" onAction="#typeCinco"
+                GridPane.rowIndex="2" GridPane.columnIndex="1"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="6" fx:id="btnSeis" onAction="#typeSeis"
+                GridPane.rowIndex="2" GridPane.columnIndex="2"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="-" fx:id="btnRestar" onAction="#restar"
+                GridPane.rowIndex="2" GridPane.columnIndex="3"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+
+        <!-- Fila 4 -->
+        <Button text="1" fx:id="btnUno" onAction="#typeUno"
+                GridPane.rowIndex="3" GridPane.columnIndex="0"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="2" fx:id="btnDos" onAction="#typeDos"
+                GridPane.rowIndex="3" GridPane.columnIndex="1"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="3" fx:id="btnTres" onAction="#typeTres"
+                GridPane.rowIndex="3" GridPane.columnIndex="2"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="+" fx:id="btnSumar" onAction="#sumar"
+                GridPane.rowIndex="3" GridPane.columnIndex="3"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+
+        <!-- Fila 5 -->
+        <Button text="0" fx:id="btnCero" onAction="#typeCero"
+                GridPane.rowIndex="4" GridPane.columnIndex="0"
+                GridPane.columnSpan="2"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="." fx:id="btnPunto" onAction="#typePunto"
+                GridPane.rowIndex="4" GridPane.columnIndex="2"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+        <Button text="=" fx:id="btnIgual" onAction="#igual"
+                GridPane.rowIndex="4" GridPane.columnIndex="3"
+                maxWidth="Infinity" maxHeight="Infinity"/>
+    </GridPane>
+
 </AnchorPane>
