Muchas correcciones realizadas
Multiplicacion, division, jerarquia de operaciones, limite de digitos.
Falta funcion de porcentaje

--- a/IngenieriaPruebas/Contenido de Construcción/Codigo_fuente/src/main/resources/proyecto/calculadora.fxml
+++ b/IngenieriaPruebas/Contenido de Construcción/Codigo_fuente/src/main/resources/proyecto/calculadora.fxml
@@ -78,7 +78,7 @@
         <Button text="9" fx:id="btnNueve" onAction="#typeNueve"
                 GridPane.rowIndex="2" GridPane.columnIndex="2"
                 maxWidth="Infinity" maxHeight="Infinity"/>
-        <Button text="X" fx:id="btnMultiplicar" onAction="#multiplicar"
+        <Button text="×" fx:id="btnMultiplicar" onAction="#multiplicar"
                 GridPane.rowIndex="2" GridPane.columnIndex="3"
                 maxWidth="Infinity" maxHeight="Infinity"/>
 
